--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,53 +1,82 @@
 <!DOCTYPE html>
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <title>Chatty</title>
-    <!-- Include Bulma CSS framework -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
-  </head>
+<html>
+    <head>
+        <meta charset="utf-8"/>
+        <title>Chatty</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+        <style>
+            .message {
+                position: absolute;
+                width: 300px;
+                padding: 5px;
+                background-color: aqua;
+                border-radius: 5px;
+                top: 10px;
+                right: 10px;
 
-  <body>
-    <section class="section">
-      <div class="container">
-        <div class="columns is-multiline">
-          <div class="column is-6 is-offset-3 mb-6">
-            <section class="hero is-primary">
-              <div class="hero-body">
-                <p class="title">Messenger by PAULO</p>
-              </div>
-            </section>
-          </div>
+            }
+        </style>
+    </head>
 
-          <div class="column is-4 is-offset-4">
-            <div class="field">
-              <label>Room name</label>
+    <body>
+        <section class="section">
+            <div class="container">
+                <div class="">
+                    <div class="column is-6 is-offset-3 mb-6">
+                        <section class="hero is-primary">
+                            <div class="hero-body">
+                                <p class="title">
+                                    Chatty
+                                </p>
+                                <p class="subtitle">
+                                    A simple chat built with Django, Channels and Redis
+                                </p>
+                            </div>
+                        </section>
+                    </div>
 
-              <div class="control">
-                  <label for="room-name-input"></label><input class="input" type="text" placeholder="Room name" id="room-name-input">
-              </div>
+                    <div class="column is-4 is-offset-4">
+                        <div class="field">
+                            <label>Room name</label>
+
+                            <div class="control">
+                                <input class="input" type="text" placeholder="Room name" id="room-name-input">
+                            </div>
+                        </div>
+
+                        <div class="field">
+                            <label>Username</label>
+
+                            <div class="control">
+                                <input class="input" type="text" placeholder="Username" id="username-input">
+                            </div>
+                        </div>
+
+                        <div class="field">
+                            <div class="control">
+                                <a class="button is-info" id="room-name-submit">Submit</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-            <div class="field">
-              <label>Username</label>
-
-              <div class="control">
-                  <label for="username-input"></label><input class="input" type="text" placeholder="Username" id="username-input">
-              </div>
-            </div>
-
-            <div class="field">
-              <div class="control">
-                <a class="button is-info" id="room-name-submit">Submit</a>
-              </div>
-            </div>
-          </div>
+        </section>
+        <div class="message">
+           {% for i in RoomModel.objects.all %}
+               {{ RoomModel.title }}
+            {% endfor %}
         </div>
-      </div>
-    </section>
 
-    <script>
-    </script>
-  </body>
+        <script>
+            document.querySelector('#room-name-input').focus();
+
+            document.querySelector('#room-name-submit').onclick = function(e) {
+                var roomName = document.querySelector('#room-name-input').value;
+                var userName = document.querySelector('#username-input').value;
+
+                window.location.replace(roomName + '/?username=' + userName);
+            };
+        </script>
+    </body>
 </html>
