--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <title>Chatty</title>
+        <title>Chat by PAULO</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
         <style>
             .message {
@@ -27,10 +27,7 @@
                         <section class="hero is-primary">
                             <div class="hero-body">
                                 <p class="title">
-                                    Chatty
-                                </p>
-                                <p class="subtitle">
-                                    A simple chat built with Django, Channels and Redis
+                                    Chat by PAULO
                                 </p>
                             </div>
                         </section>
@@ -41,18 +38,11 @@
                             <label>Room name</label>
 
                             <div class="control">
-                                <input class="input" type="text" placeholder="Room name" id="room-name-input">
+                                <label for="room-name-input">
+
+                                </label><input class="input" type="text" placeholder="Room name" id="room-name-input">
                             </div>
                         </div>
-
-                        <div class="field">
-                            <label>Username</label>
-
-                            <div class="control">
-                                <input class="input" type="text" placeholder="Username" id="username-input">
-                            </div>
-                        </div>
-
                         <div class="field">
                             <div class="control">
                                 <a class="button is-info" id="room-name-submit">Submit</a>
@@ -63,8 +53,10 @@
             </div>
         </section>
         <div class="message">
-           {% for i in RoomModel.objects.all %}
-               {{ RoomModel.title }}
+            <h1>Hi, {{ user.username }}</h1>
+            <h1>There are available room:</h1>
+           {% for r in room %}
+               {{ r.title }}
             {% endfor %}
         </div>
 
@@ -72,8 +64,7 @@
             document.querySelector('#room-name-input').focus();
 
             document.querySelector('#room-name-submit').onclick = function(e) {
-                var roomName = document.querySelector('#room-name-input').value;
-                var userName = document.querySelector('#username-input').value;
+                let roomName = document.querySelector('#room-name-input').value;
 
                 window.location.replace(roomName + '/?username=' + userName);
             };
