--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -34,20 +34,23 @@
                     </div>
 
                     <div class="column is-4 is-offset-4">
-                        <div class="field">
-                            <label>Room name</label>
+                        <form method="get" action="{% url 'room_redirect' %}">
+                            {% csrf_token %}
+                            <div class="field">
+                                <label>Room name</label>
 
-                            <div class="control">
-                                <label for="room-name-input">
-
-                                </label><input class="input" type="text" placeholder="Room name" id="room-name-input">
+                                <div class="control">
+                                    <label for="room-name-input">
+                                        <input class="input" type="text" placeholder="Room name" name="room_name">
+                                    </label>
+                                </div>
                             </div>
-                        </div>
-                        <div class="field">
-                            <div class="control">
-                                <a class="button is-info" id="room-name-submit">Submit</a>
+                            <div class="field">
+                                <div class="control">
+                                    <button class="button is-info" id="room-name-submit">Submit</button>
+                                </div>
                             </div>
-                        </div>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -56,7 +59,7 @@
             <h1>Hi, {{ user.username }}</h1>
             <h1>There are available room:</h1>
            {% for r in room %}
-               {{ r.title }}
+               <h1>{{ r.title }}</h1>
             {% endfor %}
         </div>
 
