--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -23,7 +23,7 @@
 
                     <div class="column is-6 is-offset-3">
                         <div class="box">
-                            <div id="chat-messages" style="max-height: 300px; overflow-y: scroll;">{% for m in messages %}<b>{{ m.username }}</b>: {{ m.content }}<br>{% endfor %}</div>
+                            <div id="chat-messages" style="max-height: 300px; overflow-y: scroll;">{% for m in message %}<b>{{ m.username }}</b>: {{ m.content }}<br>{% endfor %}</div>
                         </div>
 
                         <div class="field">
@@ -37,7 +37,7 @@
 
                         <div class="field">
                             <div class="control">
-                                <a class="button is-info" id="chat-message-submit">Submit</a>
+                                <a class="button is-info"  id="chat-message-submit">Submit</a>
                             </div>
                         </div>
 
